# rtrunc

./: .gitattributes  .gitignore  LICENSE  README.md  advantage_experiment.py  new_td_optimization.py  output.prof  power_law_experiments.py  pyproject.toml  rob_optimizer.py  robustness_optimization.py  rough_work.py  sampling.py  td_opt_example.py  td_optimizer.py
diagnostics/: benchmark_init_modes.py  benchmark_init_modes_2.py  profile_td_optimizer.py
examples/: advantage_experiment.py  all_figures_in_paper.py  all_plots_in_paper.py  density_matrix_plots.py  marginal_plots.py  meas_vs_vector_plot.py  mps_helpers.py  mps_random.py  mps_random_2.py  mps_random_3.py  mps_random_inlay.py  mps_random_plot.py  mps_tests.py  optimal_meas_plot_example.py  params_experiment.py  power_law_example.py  power_law_example_1.py  power_law_example_2.py  reproduce_sparse_bug.py  sampling_example.py  td_opt_example.py  temp.py
src/rtrunc/: helpers.py  random_subset_text_gif.py  rob_optimizer.py  sampling.py  sampling_v2.py  td_optimizer.py
tests/: td_test.py  test_td_optimizer.py
